src/db/migration/sea_orm/uuid/snapshots/roadster__db__migration__sea_orm__uuid__tests__create_uuid_ossp_extension.snap
---
source: src/db/migration/sea_orm/uuid/mod.rs
expression: statement
---
Statement {
    sql: "CREATE EXTENSION IF NOT EXISTS \"uuid-ossp\";",
    values: None,
    db_backend: Postgres,
}
